Добавление поддержки 1.16.5, исправление работы статусов